css/styles.css
* {
  box-sizing: border-box;
}

body {
  font: normal 16px/1.5 Roboto, system-ui, sans-serif;
  background: #35363a;
  /* overflow: hidden; */
}

main {
  position: relative;
}

a {
  color: #fff;
  text-decoration: none;
}

/* ------------ NAVIGATION ------------ */

#nav {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding: 0.75rem 0.75rem 0 0;
  margin-bottom: 20px;
}

.hide-mobile,
.hide-custom {
  display: none;
}

/* ------------ GOOGLE SECTION ------------ */

#google-section {
  display: flex;
  justify-content: center;
  margin: 0 auto;
  color: #fff;
  font-family: "Josefin Sans", sans-serif;
  font-size: 2rem;
  letter-spacing: -2px;
}

#google-heading {
  margin: 0 0 8px 0;
}

/* ------------ SEARCH BAR SECTION ------------ */

.search-bar {
  display: flex;
  justify-content: center;
  width: 260px;
  height: 44px;
  margin: 0 auto 25px;
  border-radius: 25px;
  background-color: #676767;
}

#search-contents {
  display: flex;
  align-items: center;
  width: 230px;
  position: relative;
}

#mag-glass {
  display: none;
}

#search-input-sm {
  border: none;
  width: 100%;
  font-size: 1rem;
  padding: 0 0 0 25px;
  margin: 0 auto;
  background-color: #676767;
  text-align: center;
}

#search-input-sm::placeholder {
  color: #c1c1c1;
}

#voice-dictation {
  border: none;
  color: #c1c1c1;
  background-color: #676767;
  padding: 0;
  font-size: 0.8rem;
}

#voice-dictation:hover {
  cursor: pointer;
}

.dropdown {
  display: none;
  height: auto;
  width: 560px;
  position: absolute;
  left: -18.5px;
  top: 31px;
  background-color: #fff;
  list-style: none;
  font-size: 0.8em;
  padding: 0;
  border-radius: 0 0 10px 10px;
}

.show {
  display: flex;
  flex-direction: column;
}

.hidden {
  display: none;
}

.search-padding-top {
  padding-top: 0.33rem;
}

.search-border-radius {
  border-radius: 10px 10px 0 0;
}

.dropdown-text {
  display: flex;
  align-items: center;
  color: #000;
  font-size: 1rem;
  margin: 10px 0;
}

.dropdown-text div {
  padding-left: 16px;
}

.dropdown-list-items {
  padding-left: 21px;
}

.dropdown-list-items:hover {
  background-color: #efefef;
}

.dropdown-list-items:not(:first-child) {
  margin-top: 0.5rem;
}

.fa-clock {
  background-color: #000;
  color: #fff;
  border: 1px solid #000;
  border-radius: 50%;
  font-size: 0.75rem;
  margin-right: 14px;
}

.search-span {
  font-size: 1rem;
  color: #757575;
  padding-left: 4px;
}

/* ------------ TOP SITE SECTION ------------ */

#top-websites {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  width: 336px;
  margin: 0 auto;
}

.top-site {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  font-size: 13px;
  width: 112px;
  border-radius: 4px;
  padding: 10px 5px;
  transition: all 0.2s ease-in-out;
}

.top-site-icon {
  width: 48px;
  height: 24px;
}

.top-site-icon-bg {
  background-color: rgb(32, 33, 36);
  border-radius: 25%;
  width: 48px;
  height: 48px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.fa-plus {
  font-size: 0.85rem;
}

.plus-icon {
  display: flex;
  justify-content: center;
  align-items: center;
}

.hvr-fade:hover {
  background-color: rgba(74, 74, 78);
  color: white;
}

/* ------------ VOTE SECTION ------------ */

#vote-section {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(32, 33, 36);
  width: 285px;
  height: 28px;
  margin: 5px auto 192px;
  border: solid 1px rgb(95, 99, 104);
  border-radius: 25px;
}

.vote-link {
  margin: 0;
}

#palette-icon {
  background: -moz-linear-gradient(top, #e72c83 0%, #a742c6 100%);
  background: -webkit-linear-gradient(top, #e72c83 0%, #a742c6 100%);
  background: linear-gradient(to bottom, #0000ff 0%, #00ffff 100%);
  -webkit-background-clip: text;
  -moz-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

#vote-button-container {
  margin-left: 2px;
}

#vote-button {
  background-color: rgb(32, 33, 36);
  color: rgb(123, 170, 247);
  border: none;
  height: 24px;
  font-size: 0.75rem;
}

#vote-button:hover {
  cursor: pointer;
}

/* ------------ MEDIA QUERIES ------------ */

/* @media (prefers-color-scheme: dark) {
  :host {
    --cr-toggle-checked-bar-color: var(--google-blue-300);
    --cr-toggle-checked-button-color: var(--google-blue-300);
    --cr-toggle-checked-ripple-color:
      rgba(var(--google-blue-300-rgb), .4);
    --cr-toggle-unchecked-bar-color: var(--google-grey-500);
    --cr-toggle-unchecked-button-color: var(--google-grey-300);
    --cr-toggle-unchecked-ripple-color:
      rgba(var(--google-grey-300-rgb), .4);
  }

}

:host([dark]) {
  --cr-toggle-checked-bar-color: var(--google-blue-300);
  --cr-toggle-checked-button-color: var(--google-blue-300);
  --cr-toggle-checked-ripple-color:
    rgba(var(--google-blue-300-rgb), .4);
  --cr-toggle-unchecked-bar-color: var(--google-grey-500);
  --cr-toggle-unchecked-button-color: var(--google-grey-300);
  --cr-toggle-unchecked-ripple-color:
    rgba(var(--google-grey-300-rgb), .4);
} */
/* ... */

